# AdventOfCode-2025

./: .gitignore  Cargo.toml  LICENSE
common/: Cargo.toml
common/src/: file.rs
day01/: Cargo.toml  day01.rs
day02/: Cargo.toml  day02.rs
day03/: Cargo.toml  day03.rs
day04/: Cargo.toml  day04.rs
day05/: Cargo.toml  day05.rs
day06/: Cargo.toml  day06.rs
day07/: Cargo.toml  day07.rs
day08/: Cargo.toml  day08.rs
day09/: Cargo.toml  day09.rs
